# MTP_basis_optimization

./: .gitignore  README.md  assemblemtp.py  costs.py  gols.py  gwls.py  mtpio.py  nsga.py  ols.py  pyproject.toml  wls.py
data/: bases.txt  energies.txt
examples/: potassium18.py
examples/potassium18/: potassium18.py
examples/potassium26/: potassium26.py
examples/potassium26/data/: counts.txt
examples/potassium28/: potassium28.py
src/mtpoptimizer/: __init__.py  assembly.py  core.py  cost.py  mtpio.py  sse.py
